--- a/day25/nodebird/views/main.html
+++ b/day25/nodebird/views/main.html
@@ -68,9 +68,19 @@
     <!-- prettier-ignore -->
     {% endfor %}
     {% else %}
+    <!-- prettier-ignore -->
     {% for size in range(pageOffset, pageOffset+10) %}
+    <!-- prettier-ignore -->
+    {% if size == currentPage %}
+    <a href="/?currentPage={{size}}" style="color: red">
+      <span>{{size}}</span></a
+    >&nbsp;&nbsp;
+    <!-- prettier-ignore -->
+    {% else %}
     <a href="/?currentPage={{size}}"> <span>{{size}}</span></a
     >&nbsp;&nbsp;
+    <!-- prettier-ignore -->
+    {% endif %}
     <!-- prettier-ignore -->
     {% endfor %}
     <!-- prettier-ignore -->
